12/23 bug fix overflow

--- a/src/assets/media.css
+++ b/src/assets/media.css
@@ -43,12 +43,18 @@
     width: 80px !important;
   }
   .image-belt {
+    height: 100%;
+    overflow: hidden;
     height: 680px !important;
   }
   .belt-mobile-1 {
+    /* width: 100%;
+    overflow: hidden; */
     margin-top: -150px !important;
   }
   .belt-mobile-2 {
+    /* width: 100%; */
+    /* overflow: hidden; */
     padding-top: 250px !important;
   }
 
